--- a/0.3/time/interactions.html
+++ b/0.3/time/interactions.html
@@ -19,6 +19,20 @@
 					<a href="/minno-time/0.3/time/overview.html">miTime</a>
 				</nav>
 				<nav>
+                    <div id="search-box">
+                        <script>
+                            (function() {
+                                var cx = '002953266509769041597:smg5beek-iu';
+                                var gcse = document.createElement('script');
+                                gcse.type = 'text/javascript';
+                                gcse.async = true;
+                                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                                var s = document.getElementsByTagName('script')[0];
+                                s.parentNode.insertBefore(gcse, s);
+                            })();
+                        </script>
+                        <gcse:searchbox-only></gcse:searchbox-only>
+                    </div>
                     <select id="version-select"><option value="0.3" selected>v0.3</option></select>
 					<a href="https://github.com/minnojs">Github</a>
 				</nav>
@@ -79,7 +93,7 @@
 </ul>
 </li>
 </ul>
-<h3><a name="interactions" class="header-link" href="#interactions"><span></span></a>Interactions</h3><p> The <code>interactions</code> module of the PIP is composed of pairs of conditions and actions.
+<h3><a name="interactions" class="header-link" href="#interactions"><span></span></a>Interactions</h3><p> The <code>interactions</code> module of the miTime is composed of pairs of conditions and actions.
  Each interaction object has both a conditions and an actions property. </br></p>
 <pre><code>    {
         conditions: [condition1, condition2],
@@ -91,7 +105,7 @@
         <a class="download-button" href="interactions.js" download>Download</a>
     </div>
     <div class="editor">// ### Interactions
-// The `interactions` module of the PIP is composed of pairs of conditions and actions.
+// The `interactions` module of the miTime is composed of pairs of conditions and actions.
 // Each interaction object has both a conditions and an actions property. &lt;/br&gt;
 
 //        {
