--- a/0.3/time/settings.html
+++ b/0.3/time/settings.html
@@ -19,6 +19,20 @@
 					<a href="/minno-time/0.3/time/overview.html">miTime</a>
 				</nav>
 				<nav>
+                    <div id="search-box">
+                        <script>
+                            (function() {
+                                var cx = '002953266509769041597:smg5beek-iu';
+                                var gcse = document.createElement('script');
+                                gcse.type = 'text/javascript';
+                                gcse.async = true;
+                                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                                var s = document.getElementsByTagName('script')[0];
+                                s.parentNode.insertBefore(gcse, s);
+                            })();
+                        </script>
+                        <gcse:searchbox-only></gcse:searchbox-only>
+                    </div>
                     <select id="version-select"><option value="0.3" selected>v0.3</option></select>
 					<a href="https://github.com/minnojs">Github</a>
 				</nav>
@@ -79,7 +93,7 @@
 </ul>
 </li>
 </ul>
-<h1><a name="settings" class="header-link" href="#settings"><span></span></a>Settings</h1><p> This tutorial will show you how to use the API in order to set the global settings for the PIP. </br>
+<h1><a name="settings" class="header-link" href="#settings"><span></span></a>Settings</h1><p> This tutorial will show you how to use the API in order to set the global settings for the miTime. </br>
  The <code>API.addSettings()</code> function takes two arguments; the first is the property we want to affect (i.e. canvas), and the second is the settings object we want to set in it.
  Adding setting is accumulative. this means that adding a specific setting twice merges it in, and does not reset it to its defaults. </br>
  The basic structure of the add settings object is as follows:</p>
@@ -92,7 +106,7 @@
         <a class="download-button" href="settings.js" download>Download</a>
     </div>
     <div class="editor">// # Settings
-// This tutorial will show you how to use the API in order to set the global settings for the PIP. &lt;/br&gt;
+// This tutorial will show you how to use the API in order to set the global settings for the miTime. &lt;/br&gt;
 // The `API.addSettings()` function takes two arguments; the first is the property we want to affect (i.e. canvas), and the second is the settings object we want to set in it.
 // Adding setting is accumulative. this means that adding a specific setting twice merges it in, and does not reset it to its defaults. &lt;/br&gt;
 // The basic structure of the add settings object is as follows:
