--- a/0.3/time/stimulus.html
+++ b/0.3/time/stimulus.html
@@ -19,6 +19,20 @@
 					<a href="/minno-time/0.3/time/overview.html">miTime</a>
 				</nav>
 				<nav>
+                    <div id="search-box">
+                        <script>
+                            (function() {
+                                var cx = '002953266509769041597:smg5beek-iu';
+                                var gcse = document.createElement('script');
+                                gcse.type = 'text/javascript';
+                                gcse.async = true;
+                                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                                var s = document.getElementsByTagName('script')[0];
+                                s.parentNode.insertBefore(gcse, s);
+                            })();
+                        </script>
+                        <gcse:searchbox-only></gcse:searchbox-only>
+                    </div>
                     <select id="version-select"><option value="0.3" selected>v0.3</option></select>
 					<a href="https://github.com/minnojs">Github</a>
 				</nav>
@@ -92,7 +106,7 @@ define([&quot;pipAPI&quot;,&quot;jquery&quot;], function(APIconstructor, $) {
 
 	API.addSequence([
 		// ### Stimuli and media
-		// The stimulus object is the object that tells the PIP exactly what and how to display a stimulus.
+		// The stimulus object is the object that tells the miTime exactly what and how to display a stimulus.
 		// Part of each stimulus is the media that it displays.
 
 		/* The trial begins here */
