chore(API): update typos etc

--- a/0.3/time/API.html
+++ b/0.3/time/API.html
@@ -58,7 +58,7 @@
 </ul>
 </li>
 <li><a href="#inheritance">Inheritance</a></li>
-<li><a href="#logging">Logginh</a></li>
+<li><a href="#logging">Loggin</a></li>
 </ul>
 </li>
 <li><a href="scorer.html">Scorer</a></li>
@@ -463,7 +463,7 @@ Change canvas style using any of the following properties (see <a href="#canvas"
 <li><code>{type:&#39;canvas&#39;, background:&#39;blue&#39;}</code></li>
 </ul>
 <p><strong>log</strong>:
-Log this action. Pushes this action into the logging stack so that it is later sent to the server (you can set how the player logs an action using the <a href="#logger-">logger settings</a>)</p>
+Log this action. Pushes this action into the logging stack so that it is later sent to the server (you can set how the player logs an action using the <a href="#logger">logger settings</a>)</p>
 <ul>
 <li><code>{type:&#39;log&#39;}</code></li>
 </ul>
@@ -703,7 +703,7 @@ The wrapper mixer serves a sort of parenthesis for the mixer. It has two primary
     }
 }
 </code></pre>
-<h4><a name="logger-a-hreflogger-a" class="header-link" href="#logger-a-hreflogger-a"><span></span></a>Logger <a href="#logger-"></a></h4><pre><code class="lang-javascript">logger: {
+<h4><a name="logger" class="header-link" href="#logger"><span></span></a>Logger</h4><pre><code class="lang-javascript">logger: {
     url: &#39;your/target/url&#39;,
     pulse: 3,
     fullpath: false,
@@ -920,7 +920,7 @@ Returns the logs for this task. Useful for giving user feedback or creating stai
 <ul>
 <li><code>console.log(API.getLogs());</code></li>
 </ul>
-<h3><a name="logging" class="header-link" href="#logging"><span></span></a>Logging</h3><p>The player sends all the data it has gathered to the url defined in the settings <a href="#logger-">logger</a>.
+<h3><a name="logging" class="header-link" href="#logging"><span></span></a>Logging</h3><p>The player sends all the data it has gathered to the url defined in the settings <a href="#logger">logger</a>.
 The data is sent as an ajax POST where the only field is &quot;json&quot; (unless you added something using <a href="#meta-data">metadata</a>).
 The field includes a json array including all logs created. each log is an object including the following fields:</p>
 <table>
